--- a/style.css
+++ b/style.css
@@ -1,63 +1,140 @@
-*{margin:0; padding: 0;}
-body {
-    font-family: 'Lato', sans-serif;
+*{margin:0px; padding: 0px;}
 
-}
-
-.myBody{
+div.wrapper{
+    /* background: url(./assets/cat_background.jpg); */
     width: 100%;
     height: 700px;
-    background: url(./assets/000026.JPG) ; 
-    /* overflow: hidden; */
     background-size: cover;
 }
 
-.overlay {
+.profile_name{
+    margin-left: 30px;
+    margin-top:30px;
+    border: 1px solid #000000;
+    width: 127px;
+    height: 33px;
+    text-align: center;
+    display: table;
+    position: fixed;
+    z-index: 2;
+}
+
+.profile_name p {
+    text-align:center; 
+    vertical-align: middle;
+    display: table-cell;  
+    font-family: Helvetica;
+    font-weight: lighter;
+    font-size: 22px;
+}
+#nav_toggle{
+    position: absolute;
+    right: 25px;
+    top: 40px;    
+    cursor: pointer;
+    position:fixed;
+    z-index: 2;
+    padding: 10px 35px 16px 0px;
+}
+
+#nav_toggle span, #nav_toggle span::before, #nav_toggle span::after{
+    cursor: pointer;
+    height: 1px;
+    width: 25px;
+    background: #000000;
+    position: absolute;
+    display: block;
+    content:'';
+    /* z-index: 2; */
+}
+
+#nav_toggle span::before{
+    top: -4px;
+}
+
+#nav_toggle span::after{
+    bottom: -4px;
+}
+
+#nav_toggle span, #nav_toggle span::before, #nav_toggle span::after {
+    transition: all 500ms ease-in-out;
+  }
+
+#nav_toggle.active span{
+    background-color: transparent;
+    /* z-index: 2; */
+}
+
+#nav_toggle.active span::before, #nav_toggle.active span::after{
+    top:0px;
+    /* z-index: 2; */
+}
+
+#nav_toggle.active span::before{
+    transform: rotate(45deg);
+}
+
+#nav_toggle.active span::after{
+    transform: rotate(-45deg);
+}
+
+.mainpage_img{
+    background: url(./assets/mainpage_background.jpg);
+    width: 300px;
+    height: 300px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    position: absolute;
+    background-size: cover;
+    border-radius: 50%;
+    padding-left:50px;
+    z-index: 0.5;
+}
+
+.overlay{
     height: 100%;
-    width: 0;
+    width: 0%;
     position: fixed;
     z-index: 1;
+    left:0;
     top: 0;
-    left: 0;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0, 0.9);
+    background-color: #4B4BE1;
+    background-color: #FFC80F;
     overflow-x: hidden;
     transition: 0.5s;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.overlay-content {
+.about{
+    width: 400px;
+    height: 300px;
+    /* border: 1px solid #000000; */
     position: relative;
-    top: 25%;
-    width: 100%;
-    text-align: center;
-    margin-top: 30px;
+    margin: 200px 0 0 100px;
+    float:left;
 }
 
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-
-.overlay a:hover, .overlay a:focus {
-    color: #f1f1f1;
-}
-
-.overlay .closebtn {
-    position: absolute;
-    top: 20px;
-    right: 45px;
-    font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
+.about h3{
     font-size: 40px;
-    top: 15px;
-    right: 35px;
-  }
+}
+
+.nav{
+    position:relative;
+    width: 200px;
+    height: 300px;
+    font-size:30px;
+    margin: 200px 234px 0 0;
+    float:right;
+}
+
+.nav a{
+    display: block;
+    /* text-decoration: none; */
+    color:#000000;
+        
+}
+
+.nav a:hover{
+    text-decoration: none;
 }
