--- a/style.css
+++ b/style.css
@@ -138,3 +138,62 @@ div.wrapper{
 .nav a:hover{
     text-decoration: none;
 }
+
+
+.first_content{
+    width: 100%;
+    height: 500px;
+    position: relative;
+    z-index: 0.9;
+    background-color: #4B4BE1;
+    top: 100%;
+    /* padding-top: 100%; */
+    font-family: 'Montserrat', sans-serif;
+}
+
+div.first_content .about{
+    position: relative;
+    top: -160px;
+    left: -70px;
+    width: 30%;
+    height: 40%;
+    border-radius: 10px;
+    background-color: #3F43B5;
+}
+
+div.first_content .about p{
+    color: #FFFFFF;
+}
+
+#about1_id{
+    float: right;
+    width: 30%;
+    height: 10%;
+}
+
+#about2_id{
+    display: block;
+    float: right;
+
+}
+
+div.first_content .img{
+    width: 30%;
+    height: 50%;
+    background: url(./assets/000058.jpg);
+    background-size: cover;
+    z-index: 0.9;
+    position: relative;
+    border-radius: 10%;
+    left: 50%;
+    transform: translate(-50%, -150%);
+}
+
+.second_content{
+    width: 100%;
+    height: 500px;
+    position: relative;
+    z-index: 0.9;
+    background-color: #F74C3B;
+    top:100%;
+}
