--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ div.first_content .about p{
 div.first_content .img{
     width: 30%;
     height: 50%;
-    background: url(./assets/000058.jpg);
+    background: url(./assets/000058.JPG);
     background-size: cover;
     z-index: 0.9;
     position: relative;
