--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ div.wrapper{
 }
 
 .mainpage_img{
-    background: url(./assets/mainpage_background.JPG);
+    background: url(./assets/mainpage_background.jpg);
     width: 300px;
     height: 300px;
     left: 50%;
