--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ div.wrapper{
 
 div.first_content .about{
     position: relative;
-    top: -160px;
+    top: -180px;
     
     width: 30%;
     height: 40%;
@@ -210,7 +210,7 @@ div.first_content .img{
     position: absolute;
     border-radius: 10%;
     left: 50%;
-    transform: translate(-50%, -150%);
+    transform: translate(-50%, -153%);
     opacity: 0;
     transition: 2s;
 }
@@ -240,6 +240,11 @@ div.first_content .img{
     display: inline-block;
 }
 
+.second_content p{
+    position: relative;
+    top: -5px;
+}
+
 .second_content span{
     width: 150px;
     height: 22px;
@@ -251,15 +256,15 @@ div.first_content .img{
 
 
 #span1{
-    z-index: 1;
+   z-index: 1;
 }
 
 #span2{
     /* position: relative; */
     height: 20px;
-    background-color: red;
+    background-color: #3F43B5;
     width: 0px;
     border: 1px solid #FFFFFF;
     transition: 1s;
-    /* z-index: 0.5; */
+    z-index: 0.4;
 }
